// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> should render switch 1`] = `
.c7 {
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  opacity: 0;
}

.c0 {
  display: inline-block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  position: absolute;
  left: 0;
  margin: 2px;
}

.c6 {
  width: 100%;
  height: 100%;
  border-radius: 9999px;
  -webkit-animation: dXMiPT cubic-bezier(0.3,0,0.2,1) forwards;
  animation: dXMiPT cubic-bezier(0.3,0,0.2,1) forwards;
  -webkit-animation-duration: 0ms;
  animation-duration: 0ms;
  background-color: hsla(220,27%,98%,1);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 2px;
  width: 36px;
  height: 20px;
  border-radius: 9999px;
  background-color: hsla(214,18%,69%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c2:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c2:hover + div,
.c2:focus + div {
  background-color: hsla(216,16%,60%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

<div>
  <div
    class="c0"
    display="inline-block"
  >
    <label
      class="c1"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        aria-required="false"
        class="c2"
        role="switch"
        type="checkbox"
        value=""
      />
      <div
        aria-hidden="true"
        class=" c3"
      >
        <div
          class=" c4"
        >
          <div
            class="c5 c6"
            display="flex"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0 c7"
              data-blade-component="icon"
              fill="none"
              height="8px"
              viewBox="0 0 11 8"
              width="8px"
            >
              <path
                clip-rule="evenodd"
                d="M8.81891 0.546661C9.12722 0.238352 9.62709 0.238353 9.9354 0.546661C10.2437 0.85497 10.2437 1.35484 9.9354 1.66315L4.14592 7.45262C3.83761 7.76093 3.33775 7.76093 3.02944 7.45262L0.397858 4.82104C0.0895488 4.51273 0.0895488 4.01286 0.397857 3.70456C0.706166 3.39625 1.20603 3.39625 1.51434 3.70456L3.58768 5.77789L8.81891 0.546661Z"
                fill="hsla(216, 33%, 29%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Switch /> should set disabled state with isDisabled 1`] = `
.c7 {
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  opacity: 0;
}

.c0 {
  display: inline-block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  position: absolute;
  left: 0;
  margin: 2px;
}

.c6 {
  width: 100%;
  height: 100%;
  border-radius: 9999px;
  -webkit-animation: dXMiPT cubic-bezier(0.3,0,0.2,1) forwards;
  animation: dXMiPT cubic-bezier(0.3,0,0.2,1) forwards;
  -webkit-animation-duration: 150ms;
  animation-duration: 150ms;
  background-color: hsla(220,30%,96%,1);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 2px;
  width: 36px;
  height: 20px;
  border-radius: 9999px;
  background-color: hsla(216,15%,54%,0.18);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c2:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

<div>
  <div
    class="c0"
    display="inline-block"
  >
    <label
      class="c1"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-invalid="false"
        aria-label="Toggle Darkmode"
        aria-required="false"
        class="c2"
        disabled=""
        role="switch"
        type="checkbox"
        value=""
      />
      <div
        aria-hidden="true"
        class=" c3"
      >
        <div
          class=" c4"
        >
          <div
            class="c5 c6"
            display="flex"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0 c7"
              data-blade-component="icon"
              fill="none"
              height="8px"
              viewBox="0 0 11 8"
              width="8px"
            >
              <path
                clip-rule="evenodd"
                d="M8.81891 0.546661C9.12722 0.238352 9.62709 0.238353 9.9354 0.546661C10.2437 0.85497 10.2437 1.35484 9.9354 1.66315L4.14592 7.45262C3.83761 7.76093 3.33775 7.76093 3.02944 7.45262L0.397858 4.82104C0.0895488 4.51273 0.0895488 4.01286 0.397857 3.70456C0.706166 3.39625 1.20603 3.39625 1.51434 3.70456L3.58768 5.77789L8.81891 0.546661Z"
                fill="hsla(214, 18%, 69%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
